<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/dark_faded_bg"
    android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/llTitleBarNewCard"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="19dp"
                    android:text="@string/add_card_headerStepText"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/llInputNewCard"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="27dp"
                android:layout_marginEnd="27dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/llTitleBarNewCard">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/AppTheme.App.TextInputLayout.V3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout.V3">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/add_card_firstName"
                        android:inputType="text"
                        android:maxLength="30"
                        android:maxLines="1"
                        android:paddingStart="20dp"
                        android:textSize="18sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/AppTheme.App.TextInputLayout.V3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout.V3">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_surname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/add_card_surname"
                        android:inputType="text"
                        android:maxLength="30"
                        android:maxLines="1"
                        android:paddingStart="20dp"
                        android:textSize="18sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/AppTheme.App.TextInputLayout.V3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout.V3">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/add_card_email"
                        android:inputType="textEmailAddress"
                        android:maxLength="40"
                        android:maxLines="1"
                        android:nextFocusDown="@id/et_country"
                        android:paddingStart="20dp"
                        android:textSize="18sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:focusable="false"
                    android:focusableInTouchMode="false">

                    <ImageView
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="24dp"
                        android:contentDescription="@string/add_card_country"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:src="@drawable/ic_arrow_drop_down"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/et_country_layout" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/et_country_layout"
                        style="@style/AppTheme.App.TextInputLayout.V3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout.V3"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_country"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/add_card_country"
                            android:inputType="text"
                            android:maxLength="40"
                            android:maxLines="1"
                            android:nextFocusDown="@id/et_phone_number"
                            android:paddingStart="20dp"
                            android:textSize="18sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/AppTheme.App.TextInputLayout.V3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout.V3">

                    <com.santalu.maskedittext.MaskEditText
                        android:id="@+id/et_phone_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="@string/allow_phone_symbols"
                        android:hint="@string/add_card_phone"
                        android:imeOptions="actionNext"
                        android:inputType="phone"
                        android:maxLength="15"
                        android:maxLines="1"
                        android:paddingStart="20dp"
                        android:textSize="18sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/AppTheme.App.TextInputLayout.V3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout.V3">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/add_card_address"
                        android:inputType="text"
                        android:maxLength="50"
                        android:maxLines="1"
                        android:paddingStart="20dp"
                        android:textSize="18sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/postal_code_layout"
                        style="@style/AppTheme.App.TextInputLayout.V3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="14dp"
                        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout.V3">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_postal"
                            android:layout_width="145dp"
                            android:layout_height="wrap_content"
                            android:hint="@string/add_card_postalCode"
                            android:inputType="number"
                            android:maxLength="6"
                            android:maxLines="1"
                            android:nextFocusDown="@id/et_city"
                            android:paddingStart="20dp"
                            android:textSize="18sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/AppTheme.App.TextInputLayout.V3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout.V3">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_city"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/add_card_city"
                            android:inputType="text"
                            android:maxLength="50"
                            android:maxLines="1"
                            android:paddingStart="20dp"
                            android:textSize="18sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/acbNextStep"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="60dp"
                android:background="@drawable/view_button_inactive"
                android:text="Next"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/llInputNewCard" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
